# emb-explorer

./: .gitignore  .zenodo.json  CITATION.cff  ISSUES.md  MODULARIZATION.md  README.md  app.py  app_backup.py  compute.slurm  compute_config.json  list_models.py  pyproject.toml  requirements.txt  setup.sh  test_faiss_clustering.py  test_installation.py
.github/: copilot-instructions.md
.github/workflows/: install-and-import.yaml
apps/: __init__.py
apps/embed_explore/: __init__.py  app.py
apps/embed_explore/components/: __init__.py  image_preview.py  sidebar.py  summary.py  visualization.py
apps/precalculated/: __init__.py  app.py
apps/precalculated/components/: __init__.py  data_preview.py  sidebar.py  visualization.py
components/clustering/: __init__.py  sidebar.py  summary.py  visualization.py
components/precalculated/: __init__.py  data_preview.py  sidebar.py
components/shared/: __init__.py  clustering_controls.py
data/: README.md  available_models.csv  example_1k.parquet
docs/: BACKEND_PIPELINE.md  DATA_FORMAT.md  implementation_summary.md
pages/: 01_Clustering.py  02_Precalculated_Embeddings.py
scripts/: compute.slurm  compute_config.json  compute_config_template.json  compute_template.slurm
server/: __init__.py
services/: clustering_service.py  embedding_service.py  file_service.py  parquet_service.py
shared/: __init__.py
shared/components/: __init__.py  clustering_controls.py  demo_chrome.py  representatives.py  summary.py  visualization.py
shared/lib/: __init__.py  progress.py
shared/services/: __init__.py  clustering_service.py  embedding_service.py  file_service.py
shared/utils/: __init__.py  backend.py  clustering.py  image_pipeline.py  images.py  io.py  logging_config.py  models.py  representatives.py  taxonomy_tree.py
spaces/precalculated-demo/: Dockerfile  README.md  requirements-space.txt
src/: compute.py  compute_arrow.py
tests/: README.md  conftest.py  run_cpu_tests.sh  run_gpu_tests.sh  test_backend.py  test_clustering.py  test_clustering_service.py  test_filters.py  test_logging_config.py  test_representatives.py  test_taxonomy_tree.py
ui/: __init__.py
ui/clustering/: __init__.py  sidebar.py  summary.py  visualization.py
ui/shared/: __init__.py
utils/: __init__.py  clustering.py  create_model_pretrained_table.py  dataset.py  models.py  remove_corrupted_images.py  taxonomy_tree.py
